--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ main {
     margin: 0 3vw;
 }
 
+ul {
+    padding: 0;
+}
+
 li {
     list-style: none;
 }
@@ -33,6 +37,7 @@ a {
 
 a:hover {
     color: var(--secondary_color);
+    text-shadow: 1px 2px black;
 }
 
 /*-----Header------*/
@@ -67,16 +72,69 @@ h1 {
     width: 60px;
     height: 85px;
     padding: 1vw 2vw 0 0;
+} 
+
+#deroulantBurger {
+    z-index: 2;
+    width: 40%;
+    height: 70%;
+    position: fixed;
+    background-color: rgba(124, 187, 179, 0.8);
+    left: -40%;
+    transition: left 0.5s;
+}
+
+#deroulantBurger ul {
+    margin: 0;
+} 
+
+#deroulantBurger li {
+    padding-left: 20%;
+    border-bottom: 1px solid black;
+    
+}
+
+#deroulantBurger.open {
+    left: 0;
+}
+
+#deroulantBurger li a {
+    text-transform: uppercase;
 }
 
 /*-----carousel-----*/
 #carousel {
-    display: flex;
     background: url(images/lillegp.jpg);
     width: 100%;
     height: 45%;
-    flex-direction: column;
-    align-items: flex-start;
     background-size: cover;
+    position: relative;
 }
 
+#carousel h2, #carousel p {
+    color: white;
+    font-weight: bold;
+    padding: 0 2vw;
+    margin: 0;
+    text-align: center;
+}
+
+#carousel h2 {
+    font-size: 20px;
+}
+
+#carousel p {
+    font-size: 17px;
+}
+#bandeau {
+    position: absolute;
+    bottom: 0;
+    border-radius: 0px 0px 5px 5px;
+    width: 100%;
+    height: 40%;
+    background-color: rgba(24,24,24,0.8);
+    color: white;
+    flex-direction: column;
+    justify-content: center;
+    display: flex;
+}
