--- a/style.css
+++ b/style.css
@@ -17,10 +17,11 @@ html, body {
     font-size: 16px;
 
 }
-
 main {
-    margin: 0 3vw;
-}
+    margin: 0;
+    padding: 0 2vw;
+    background-color: rgba(152, 159, 163, 0.8);
+} 
 
 ul {
     padding: 0;
@@ -47,6 +48,10 @@ header {
     justify-content: space-between;
     align-items: center;
     background-color: var(--primary_color);
+    width: 100%;
+    height: 96px;
+    position: fixed;
+    z-index: 1;
 }
 
 #burgerAlign {
@@ -82,6 +87,7 @@ h1 {
     background-color: rgba(124, 187, 179, 0.8);
     left: -40%;
     transition: left 0.5s;
+    margin-top: 96px;
 }
 
 #deroulantBurger ul {
@@ -103,12 +109,16 @@ h1 {
 }
 
 /*-----carousel-----*/
+#separation {
+    height: 96px;
+}
 #carousel {
     background: url(images/lillegp.jpg);
     width: 100%;
     height: 45%;
     background-size: cover;
     position: relative;
+    
 }
 
 #carousel h2, #carousel p {
@@ -137,4 +147,32 @@ h1 {
     flex-direction: column;
     justify-content: center;
     display: flex;
+}
+
+/*------Main-----*/
+#listEnvies h2 {
+    text-align: center;
+    margin: 0;
+    padding: 2vw 0;
+    background: url(images/logo2.png) no-repeat left;
+    width: 50%;
+    margin: auto;
+}
+#grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.envie {
+    width: 150px;
+    margin: auto;
+    margin-bottom: 3vw;
+    box-shadow: -1px 2px 5px 1px rgba(0, 0, 0, 0.7);
+    background-color: var(--primary_color);
+    
+}
+
+.envie h3 {
+    margin: 0;
+    text-align: center;
 }
