--- a/desktop.css
+++ b/desktop.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 961px) {
+@media screen and (min-width: 1260px) {
     /*-----Header----*/
     #hamburger {
         display: none;
@@ -12,8 +12,8 @@
         display: flex;
         width: 70%;
         justify-content: flex-end;
-
     }
+
     #navDesk ul {
         display: flex;
         list-style: none;
@@ -31,12 +31,10 @@
     /*----carousel---*/
     #carousel {
         height: 85%;
-
     }
 
     #carousel h2, #carousel p {
         text-align: left;
-    
     }
 
     #carousel h2 {
@@ -50,8 +48,39 @@
     #bandeau {
         height: 20%;
         justify-content: center;
-    
+    }
+ 
+    /*-------Main-------*/
+
+    #listEnvies h2 {
+        font-size: 30px;
+        background: url(images/logo.png) no-repeat left;
+        width: 25%;
     }
 
+    .envie {
+        width: 600px;
+    }
+
+    .envie img {
+        width: 600px;
+        height: 400px;
+    }
+
+    /*------Footer----*/
+    
+    footer h2 {
+        font-style: italic;
+        text-shadow: 1px 2px var(--secondary_color);
+    }
+
+    footer p {
+        display: flex;
+        font-size: 18px;
+    }
+
+    footer img {
+        display: none;
+    }
   
 }
